# rust_static_llm

./: Cargo.toml  README.md
data/: qa.json
src/: embed.rs  llm.rs  llm_main.rs  main.rs  search.rs  static_qa.rs
