[package]
name = "termcopilot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2.3"
pdf = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.7"
# llm = { version =  "1.2.4", features = ["llama"] }  # From Huggingface/LLaMA-compatible crate
anyhow = "1"
inquire = "0.7.5"